# maxapi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
doc/: router_inner_middleware.md
docs/: MAX_API_Real_Payloads_2026.md  examples.md  index.md
docs/connection/: index.md
docs/context/: index.md
docs/enums/: format.md  index.md  parse_mode.md
docs/exceptions/: download_file.md
docs/filters/: channel_post.md  contact.md  exception_type.md  index.md
docs/guides/: context.md  filters.md  installation.md  keyboards.md  middleware.md  routers.md  webhook_vs_polling.md
docs/methods/: index.md
docs/methods/types/: index.md
docs/types/: errors.md  index.md
docs/types/attachments/: index.md
docs/types/updates/: base_update.md  index.md  update.md
docs/utils/: deep_linking.md  index.md  vcf.md
examples/: 01_echo_bot.py  02_formatting_bot.py  03_keyboard_bot.py  04_fsm_bot.py  05_media_bot.py  06_admin_bot.py  07_router_bot.py  08_middleware_bot.py  09_webhook_bot.py  10_callback_payload_bot.py  11_download_urls.py  12_private_chat_management_bot.py  13_manual_events_bot.py  14_download_media_bot.py  15_deep_linking_bot.py  README.md
maxapi/: __init__.py  bot.py  dispatcher.py
maxapi/client/: default.py  ssl.py
maxapi/connection/: base.py
maxapi/context/: __init__.py  base.py  context.py  manager.py  state_machine.py  ttl.py
maxapi/enums/: __init__.py  chat_permission.py  chat_type.py  text_style.py
maxapi/exceptions/: dispatcher.py  max.py
maxapi/filters/: __init__.py  callback_payload.py  command.py  exception_type.py  filter.py  handler.py  middleware.py  state.py
maxapi/methods/: add_admin_chat.py  add_members_chat.py  change_info.py  delete_bot_from_chat.py  delete_chat.py  delete_message.py  delete_pin_message.py  edit_chat.py  edit_message.py  get_chat_by_id.py  get_chat_by_link.py  get_chats.py  get_list_admin_chat.py  get_me.py  get_me_from_chat.py  get_members_chat.py  get_message.py  get_messages.py  get_pinned_message.py  get_subscriptions.py  get_updates.py  get_upload_url.py  get_video.py  pin_message.py  remove_admin.py  remove_member_chat.py  send_action.py  send_callback.py  send_message.py  subscribe_webhook.py  unsubscribe_webhook.py
maxapi/methods/types/: __init__.py  added_admin_chat.py  added_members_chat.py  deleted_bot_from_chat.py  deleted_chat.py  deleted_message.py  deleted_pin_message.py  edited_message.py  removed_admin.py  (+11 more)
maxapi/types/: __init__.py  bot_mixin.py  callback.py  chats.py  command.py  error_event.py  input_media.py  message.py  shortcuts.py  subscription.py  users.py
maxapi/utils/: __init__.py  deep_linking.py  formatting.py  inline_keyboard.py  message.py  message_link.py  runtime.py  updates.py
maxapi/webhook/: aiohttp.py  base.py  fastapi.py
tests/: conftest.py  get_chat_id.py  test_bot.py  test_channel_post_filter.py  test_chats_timestamps.py  test_client_ssl.py  test_contact_filter.py  test_contact_vcf_access.py  test_context.py  test_coverage_gaps.py  test_dispatcher.py  test_dispatcher_register_handlers.py  test_download_file.py  test_enrich_event.py  test_errors.py  test_fetchable_refs.py  test_filters.py  test_fixtures_update_mapping.py  test_format_parameter.py  test_formatting.py  test_getted_updates.py  test_handler_extra.py  test_highlevel_shortcuts.py  test_integration.py  test_magic_filter_combinations.py  test_markup_discrimination.py  test_media_retry.py  test_message_body_none.py  test_message_url.py  test_messagecallback_none.py  test_middleware.py  test_nested_routers.py  test_patch_coverage_regression.py  test_public_reexports.py  test_retry.py  test_send_callback.py  test_send_message_fetch.py  test_serialization_models.py  test_strenum_compat.py  test_swagger_alignment.py  (+3 more)
tests/fixtures/: updates.py
tests/test_utils/: test_commands.py  test_deep_linking.py  test_keyboard_builder.py  test_message_link.py  test_message_media_upload.py  test_time_utils.py
tests/test_webhook/: test_aiohttp_webhook.py  test_dispatcher_handle_webhook.py  test_dispatcher_startup_webhook.py  test_handle_webhook_route.py  test_handler_crash.py  test_litestar_webhook.py  test_webhook_post.py
(+33 files in other folders)
